--- a/cb-web-client/package.json
+++ b/cb-web-client/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.1.0",
@@ -24,7 +25,7 @@
     "@angular/pwa": "^0.7.5",
     "@angular/router": "^6.1.0",
     "@angular/service-worker": "^6.1.0",
-    "@types/googlemaps": "^3.30.12",
+    "@types/googlemaps": "^3.30.13",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
@@ -41,7 +42,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
